--- a/portfolio.html
+++ b/portfolio.html
@@ -279,7 +279,7 @@
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
                         <div class="videocontainer">
-                            <iframe class="youtube-video" src="https://www.youtube.com/embed/7e90gBu4pas?enablejsapi=1&amp;version=3&amp;playerapiid=ytplayer" allowfullscreen></iframe>
+                            <iframe class="youtube-video" src="" allowfullscreen></iframe>
                         </div>
                         <!-- Main Project Content Ends -->
                     </figure>
