--- a/about.html
+++ b/about.html
@@ -344,8 +344,8 @@
                                 <i class="fa fa-graduation-cap"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">2015</span>
-                            <h5 class="poppins-font text-uppercase">Engineering Degree <span class="place open-sans-font">Punjabi University</span></h5>
-                           // <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore</p>
+                            <h5 class="poppins-font text-uppercase">Engineering Degree <span class="place open-sans-font">Yadavindra College Of Engineering Punjabi University</span></h5>
+                            <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore</p>
                         </li>
                         <li>
                             <div class="icon">
@@ -353,7 +353,7 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2012</span>
                             <h5 class="poppins-font text-uppercase">Intermediate <span class="place open-sans-font">Yadavindra College Of Engineering</span></h5>
-                           // <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut adipisicing</p>
+                           <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut adipisicing</p>
                         </li>
                         <li>
                             <div class="icon">
@@ -361,7 +361,7 @@
                             </div>
                             <span class="time open-sans-font text-uppercase">2009</span>
                             <h5 class="poppins-font text-uppercase">Metric <span class="place open-sans-font">Camford Public School </span></h5>
-                            // <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore</p>
+                             <p class="open-sans-font">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore</p>
                         </li>
                     </ul>
                 </div>
