--- a/index.html
+++ b/index.html
@@ -109,12 +109,7 @@
                 <h2>Contact</h2>
             </a>
         </li>
-        <li class="icon-box">
-            <i class="fa fa-comments"></i>
-            <a href="blog.html">
-                <h2>Blog</h2>
-            </a>
-        </li>
+       
     </ul>
     <!-- Fixed Navigation Ends -->
     <!-- Mobile Menu Starts -->
@@ -129,7 +124,7 @@
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
-                <li><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
+                
             </ul>
         </div>
     </nav>
@@ -146,7 +141,7 @@
                 <img src="img/img-mobile.jpg" class="img-fluid main-img-mobile d-none d-sm-block d-lg-none" alt="my picture" />
                 <h6 class="text-uppercase open-sans-font mb-0 d-block d-sm-none d-lg-block">hi there !</h6>
                 <h1 class="text-uppercase poppins-font"><span>I'm</span> Vikash Kumar Singh</h1>
-                <p class="open-sans-font">I'm a Indian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
+                <p class="open-sans-font">B.Tech in Computer science and Engineering from Punjabi University Patiala. I am Seeking for Entry level role to kick start my career as software Engineer.</p>
                 <a href="about.html" class="btn btn-about">more about me</a>
             </div>
         </div>
