--- a/portfolio.html
+++ b/portfolio.html
@@ -110,12 +110,7 @@
                 <h2>Contact</h2>
             </a>
         </li>
-        <li class="icon-box">
-            <i class="fa fa-comments"></i>
-            <a href="blog.html">
-                <h2>Blog</h2>
-            </a>
-        </li>
+        
     </ul>
     <!-- Fixed Navigation Ends -->
     <!-- Mobile Menu Starts -->
@@ -130,7 +125,7 @@
                 <li><a href="about.html"><i class="fa fa-user"></i><span>About</span></a></li>
                 <li class="active"><a href="portfolio.html"><i class="fa fa-folder-open"></i><span>Portfolio</span></a></li>
                 <li><a href="contact.html"><i class="fa fa-envelope-open"></i><span>Contact</span></a></li>
-                <li><a href="blog.html"><i class="fa fa-comments"></i><span>Blog</span></a></li>
+                
             </ul>
         </div>
     </nav>
@@ -161,7 +156,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-2.jpg" alt="Portolio Image" />
-                        <div><span>Youtube Project</span></div>
+                        <div><span>Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -169,7 +164,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-3.jpg" alt="Portolio Image" />
-                        <div><span>Slider Project</span></div>
+                        <div><span> Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -177,7 +172,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-4.jpg" alt="Portolio Image" />
-                        <div><span>Local Video Project</span></div>
+                        <div><span> Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -185,7 +180,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-5.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -193,7 +188,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-6.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -201,7 +196,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-7.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -209,7 +204,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-8.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -217,7 +212,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-9.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -260,7 +255,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Youtube Project</h3>
+                            <h3> Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Video</span>
@@ -290,7 +285,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Slider Project</h3>
+                            <h3> Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -336,7 +331,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Local Video Project</h3>
+                            <h3>Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Video</span>
@@ -366,7 +361,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3> Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -394,7 +389,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -422,7 +417,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -450,7 +445,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
@@ -478,7 +473,7 @@
                     <figure>
                         <!-- Project Details Starts -->
                         <figcaption>
-                            <h3>Image Project</h3>
+                            <h3>Project</h3>
                             <div class="row open-sans-font">
                                 <div class="col-6 mb-2">
                                     <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
