--- a/about.html
+++ b/about.html
@@ -286,7 +286,7 @@
                                 <i class="fa fa-briefcase"></i>
                             </div>
                             <span class="time open-sans-font text-uppercase">January 2021 - May 2021</span>
-                            <h5 class="poppins-font text-uppercase">WEB DEVELOPER TRANEE <span class="place open-sans-font">EXCELLENCE TECNOLOGY MOHAL</span></h5>
+                            <h5 class="poppins-font text-uppercase">WEB DEVELOPER TRANEE <span class="place open-sans-font">EXCELLENCE TECNOLOGY MOHALI</span></h5>
                             
                         </li>
                         <li>
