--- a/contact.html
+++ b/contact.html
@@ -159,9 +159,9 @@
                     </li>
                     <li class="twitter"><a title="Twitter" href="#"><i class="fa fa-twitter"></i></a>
                     </li>
-                    <li class="youtube"><a title="Youtube" href="#"><i class="fa fa-youtube"></i></a>
+                    <li class="youtube"><a title="Youtube" href="#"><i class="fa fa-instagram"></i></a>
                     </li>
-                    <li class="dribbble"><a title="Dribbble" href="#"><i class="fa fa-dribbble"></i></a>
+                    <li class="dribbble"><a title="Dribbble" href="#"><i class="fa fa-linkedIn"></i></a>
                     </li>
                 </ul>
             </div>
