--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                             <li> <span class="title">D.O.B :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">09/07/20000</span> </li>
                             <li> <span class="title">Age :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">20 Years</span> </li>
                             <li> <span class="title">Nationality :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">INDIAN</span> </li>
-                            
+                            <li> <span class="title"> :</span>Location<span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Kolkta</span> </li>
                         </ul>
                     </div>
                     <div class="col-6">
@@ -185,7 +185,7 @@
                 <h3 class="text-uppercase pb-4 pb-sm-5 mb-3 mb-sm-0 text-left text-sm-center custom-title ft-wt-600">My Skills</h3>
             </div>
             <div class="col-6 col-md-3 mb-3 mb-sm-5">
-                <div class="c100 p60%">
+                <div class="c100 p60">
                     <span>60%</span>
                     <div class="slice">
                         <div class="bar"></div>
