--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                             <li> <span class="title">D.O.B :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">09/07/20000</span> </li>
                             <li> <span class="title">Age :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">20 Years</span> </li>
                             <li> <span class="title">Nationality :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">INDIAN</span> </li>
-                            <li> <span class="title"> :</span>Location<span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Kolkta</span> </li>
+                            <li> <span class="title">Location:</span><span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Kolkta</span> </li>
                         </ul>
                     </div>
                     <div class="col-6">
