--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
                 <li>
                     <figure>
                         <img src="img/projects/project-1.jpg" alt="Portolio Image" />
-                        <div><span>Image Project</span></div>
+                        <div><span>Project</span></div>
                     </figure>
                 </li>
                 <!-- Portfolio Item Ends -->
@@ -226,23 +226,7 @@
                 <li>
                     <figure>
                         <!-- Project Details Starts -->
-                        <figcaption>
-                            <h3>Image Project</h3>
-                            <div class="row open-sans-font">
-                                <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-file-text-o pr-2"></i><span class="project-label">Project </span>: <span class="ft-wt-600 uppercase">Website</span>
-                                </div>
-                                <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-user-o pr-2"></i><span class="project-label">Client </span>: <span class="ft-wt-600 uppercase">Envato</span>
-                                </div>
-                                <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-code pr-2"></i><span class="project-label">Langages </span>: <span class="ft-wt-600 uppercase">HTML, CSS, Javascript</span>
-                                </div>
-                                <div class="col-12 col-sm-6 mb-2">
-                                    <i class="fa fa-external-link pr-2"></i><span class="project-label">Preview </span>: <span class="ft-wt-600 uppercase"><a href="#" target="_blank">www.envato.com</a></span>
-                                </div>
-                            </div>
-                        </figcaption>
+                       
                         <!-- Project Details Ends -->
                         <!-- Main Project Content Starts -->
                         <img src="img/projects/project-1.jpg" alt="Portolio Image" />
