--- a/about.html
+++ b/about.html
@@ -156,16 +156,16 @@
                     <div class="col-6">
                         <ul class="about-list list-unstyled open-sans-font">
                             <li> <span class="title"> Name :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">VIKASH KUMAR SINGH</span> </li>
-                            <li> <span class="title">D.O.B :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">09/07/20000</span> </li>
-                            <li> <span class="title">Age :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">20 Years</span> </li>
+                            <li> <span class="title">D.O.B :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">09/07/2000</span> </li>
+                            <li> <span class="title">Age :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">21 Years</span> </li>
                             <li> <span class="title">Nationality :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">INDIAN</span> </li>
-                            <li> <span class="title">Location:</span><span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Kolkta</span> </li>
+                            <li> <span class="title">Location:</span><span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Delhi</span> </li>
                         </ul>
                     </div>
                     <div class="col-6">
                         <ul class="about-list list-unstyled open-sans-font">
                             <li> <span class="title">Address :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">India</span> </li>
-                            <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+91-756469358</span> </li>
+                            <li> <span class="title">phone :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">+91-75604693xx</span> </li>
                             <li> <span class="title">Email :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">utkarsh09singh@mail.com</span> </li>
                             <li> <span class="title">Skype :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">utkarsh09singh</span> </li>
                             <li> <span class="title">langages :</span> <span class="value d-block d-sm-inline-block d-lg-block d-xl-inline-block">Hindi,Punjabi, English</span> </li>
