--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
                     </li>
                     <li class="youtube"><a title="Youtube" href="#"><i class="fa fa-instagram"></i></a>
                     </li>
-                    <li class="dribbble"><a title="Dribbble" href="#"><i class="fa fa-linkedIn"></i></a>
+                    <li class="dribbble"><a title="Dribbble" href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </li>
                 </ul>
             </div>
